RESOLVED FIXED97450
There is a mistake in InspectorProfilerAgent::enable(bool skipRecompile)
https://bugs.webkit.org/show_bug.cgi?id=97450
Summary There is a mistake in InspectorProfilerAgent::enable(bool skipRecompile)
Peter Wang
Reported 2012-09-24 06:38:52 PDT
Created attachment 165368 [details] how to reproduce Now, InspectorProfilerAgent::enable(bool skipRecompile) invokes PageScriptDebugServer::recompileAllJSFunctionsSoon(). When in worker thread it will cause a problem. With QT debug build, following the attached picture, we can reproduce the problem.
Attachments
how to reproduce (24.75 KB, image/png)
2012-09-24 06:38 PDT, Peter Wang
no flags
Patch (3.80 KB, patch)
2012-09-24 06:45 PDT, Peter Wang
no flags
Peter Wang
Comment 1 2012-09-24 06:45:29 PDT
WebKit Review Bot
Comment 2 2012-09-24 18:05:26 PDT
Comment on attachment 165369 [details] Patch Clearing flags on attachment: 165369 Committed r129438: <http://trac.webkit.org/changeset/129438>
WebKit Review Bot
Comment 3 2012-09-24 18:05:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.