There is a mistake in InspectorProfilerAgent::enable(bool skipRecompile) https://bugs.webkit.org/show_bug.cgi?id=97450

Patch by Peter Wang <peter.wang@torchmobile.com.cn> on 2012-09-24
Reviewed by Yury Semikhatsky.

The "InspectorProfilerAgent::enable()" should invokes "PageScriptDebugServer" in
no-worker thread.

No new test case.

* inspector/InspectorProfilerAgent.cpp:
(WebCore::PageProfilerAgent::recompileScript):
(PageProfilerAgent):
(WebCore::WorkerProfilerAgent::recompileScript):
(WorkerProfilerAgent):
(WebCore::InspectorProfilerAgent::disable):
(WebCore::InspectorProfilerAgent::enable):
* inspector/InspectorProfilerAgent.h:
(InspectorProfilerAgent):

Canonical link: https://commits.webkit.org/115459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129438 268f45cc-cd09-0410-ab3c-d52691b4dbfc